Don't play games with the <meta> tag when not serializing an entire document. Bug 390735, patch by Ryan Jones <sciguyryan@gmail.com>, r+sr=bzbarsky, a=jst