content/base/src/nsPlainTextSerializer.h
@@ -69,7 +69,8 @@ public:
 
   // nsIContentSerializer
   NS_IMETHOD Init(PRUint32 flags, PRUint32 aWrapColumn,
-                  const char* aCharSet, PRBool aIsCopying);
+                  const char* aCharSet, PRBool aIsCopying,
+                  PRBool aIsWholeDocument);
 
   NS_IMETHOD AppendText(nsIDOMText* aText, PRInt32 aStartOffset,
                         PRInt32 aEndOffset, nsAString& aStr);
